# recording_app

./: package.json
app/dashboard/: page.tsx
app/login/: page.tsx
components/: schedule-dialog.tsx
lib/: tauri.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  commands.rs  drive.rs  lib.rs  models.rs  scheduler.rs
